FIXED crazy-ass phantom scrollbar in chrome for windows... only lost 3 days of sleep.

--- a/assets/stylesheets/background.css
+++ b/assets/stylesheets/background.css
@@ -36,6 +36,7 @@
   line-height: 0;
   padding: 0;
   position: absolute;
+  text-align: center;
   top: -13px;
   width: 26px;
 }
